--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 text-end">
-                    <small>Backend API: <span id="api-url">http://127.0.0.1:5001</span></small>
+                    <small>Backend API: <span id="api-url"></span></small>
                 </div>
             </div>
         </div>
@@ -158,8 +158,14 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        const API_BASE_URL = 'http://127.0.0.1:5001/api';
+        // Automatically detect if we're in development or production
+        const API_BASE_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
+            ? 'http://127.0.0.1:5001/api'
+            : `${window.location.protocol}//${window.location.host}/api`;
         
+        // Set API URL display
+        document.getElementById('api-url').textContent = API_BASE_URL.replace('/api', '');
+
         // Check API health on page load
         async function checkAPIHealth() {
             try {
